# src/main/java/ru/andryss/rutube/controller/VideoController.java
@@ -1,6 +1,7 @@
 package ru.andryss.rutube.controller;
 
 import jakarta.validation.Valid;
+import jakarta.validation.constraints.Max;
 import jakarta.validation.constraints.NotBlank;
 import jakarta.validation.constraints.Positive;
 import jakarta.validation.constraints.PositiveOrZero;
@@ -13,9 +14,6 @@ import org.springframework.web.bind.annotation.*;
 import ru.andryss.rutube.interactor.VideoInteractor;
 import ru.andryss.rutube.message.*;
 
-import static org.springframework.http.HttpStatus.NO_CONTENT;
-import static org.springframework.http.HttpStatus.OK;
-
 @Validated
 @RestController
 @RequiredArgsConstructor
@@ -24,7 +22,6 @@ public class VideoController {
     private final VideoInteractor interactor;
 
     @PostMapping("/api/videos:new")
-    @ResponseStatus(OK)
     public NewVideoResponse postApiVideosNew(
             @RequestParam(required = false) String prototype,
             @AuthenticationPrincipal User user
@@ -33,16 +30,14 @@ public class VideoController {
     }
 
     @GetMapping("/api/videos")
-    @ResponseStatus(OK)
     public GetVideosResponse getApiVideos(
             @RequestParam(defaultValue = "0") @PositiveOrZero int pageNumber,
-            @RequestParam(defaultValue = "1") @Positive int pageSize
+            @RequestParam(defaultValue = "1") @Positive @Max(100) int pageSize
     ) {
         return interactor.getApiVideos(PageRequest.of(pageNumber, pageSize));
     }
 
     @GetMapping("/api/videos/{sourceId}")
-    @ResponseStatus(OK)
     public GetVideoResponse getApiVideo(
             @PathVariable String sourceId
     ) {
@@ -50,7 +45,6 @@ public class VideoController {
     }
 
     @PutMapping("/api/videos/{sourceId}")
-    @ResponseStatus(NO_CONTENT)
     public void putApiVideos(
             @PathVariable String sourceId,
             @RequestBody @Valid PutVideoRequest request,
@@ -60,7 +54,6 @@ public class VideoController {
     }
 
     @GetMapping("/api/videos/{sourceId}/status")
-    @ResponseStatus(OK)
     public GetVideoStatusResponse getApiVideosStatus(
             @PathVariable @NotBlank String sourceId,
             @AuthenticationPrincipal User user
@@ -69,7 +62,6 @@ public class VideoController {
     }
 
     @PostMapping("/api/videos/{sourceId}:publish")
-    @ResponseStatus(NO_CONTENT)
     public void postApiVideosPublish(
             @PathVariable @NotBlank String sourceId,
             @AuthenticationPrincipal User user
